pdf gerado com imagens e steps